<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/textView1"
        android:layout_width="407dp"
        android:layout_height="42dp"
        android:text="@string/last"
        tools:layout_editor_absoluteX="2dp"
        tools:layout_editor_absoluteY="84dp" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="407dp"
        android:layout_height="42dp"
        android:text="@string/now"
        tools:layout_editor_absoluteX="2dp"
        tools:layout_editor_absoluteY="141dp" />

    <Button
        android:id="@+id/buttonAD"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:text="@string/ad"
        tools:layout_editor_absoluteX="2dp"
        tools:layout_editor_absoluteY="245dp" />

    <Button
        android:id="@+id/buttonC"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:text="@string/c"
        tools:layout_editor_absoluteX="104dp"
        tools:layout_editor_absoluteY="245dp" />

    <Button
        android:id="@+id/button"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:text="@string/del"
        tools:layout_editor_absoluteX="206dp"
        tools:layout_editor_absoluteY="245dp" />

    <Button
        android:id="@+id/buttonDivide"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:text="@string/Divide"
        tools:layout_editor_absoluteX="308dp"
        tools:layout_editor_absoluteY="245dp" />

    <Button
        android:id="@+id/button1"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:text="@string/_1"
        tools:layout_editor_absoluteX="2dp"
        tools:layout_editor_absoluteY="342dp" />

    <Button
        android:id="@+id/button2"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:text="@string/_2"
        tools:layout_editor_absoluteX="104dp"
        tools:layout_editor_absoluteY="342dp" />

    <Button
        android:id="@+id/button3"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:text="@string/_3"
        tools:layout_editor_absoluteX="206dp"
        tools:layout_editor_absoluteY="342dp" />

    <Button
        android:id="@+id/buttonMultiply"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:text="@string/Multiply"
        tools:layout_editor_absoluteX="308dp"
        tools:layout_editor_absoluteY="342dp" />

    <Button
        android:id="@+id/button4"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:text="@string/_4"
        tools:layout_editor_absoluteX="2dp"
        tools:layout_editor_absoluteY="439dp" />

    <Button
        android:id="@+id/button5"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:text="@string/_5"
        tools:layout_editor_absoluteX="104dp"
        tools:layout_editor_absoluteY="439dp" />

    <Button
        android:id="@+id/button6"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:text="@string/_6"
        tools:layout_editor_absoluteX="206dp"
        tools:layout_editor_absoluteY="439dp" />

    <Button
        android:id="@+id/buttonReduce"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:text="@string/Reduce"
        tools:layout_editor_absoluteX="308dp"
        tools:layout_editor_absoluteY="439dp" />

    <Button
        android:id="@+id/button7"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:text="@string/_7"
        tools:layout_editor_absoluteX="2dp"
        tools:layout_editor_absoluteY="536dp" />

    <Button
        android:id="@+id/button8"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:text="@string/_8"
        tools:layout_editor_absoluteX="104dp"
        tools:layout_editor_absoluteY="536dp" />

    <Button
        android:id="@+id/button9"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:text="@string/_9"
        tools:layout_editor_absoluteX="206dp"
        tools:layout_editor_absoluteY="536dp" />

    <Button
        android:id="@+id/buttonAdd"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:text="@string/Add"
        tools:layout_editor_absoluteX="308dp"
        tools:layout_editor_absoluteY="536dp" />

    <Button
        android:id="@+id/buttonPoint"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:text="@string/point"
        tools:layout_editor_absoluteX="2dp"
        tools:layout_editor_absoluteY="633dp" />

    <Button
        android:id="@+id/button0"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:text="@string/_0"
        tools:layout_editor_absoluteX="104dp"
        tools:layout_editor_absoluteY="633dp" />

    <Button
        android:id="@+id/buttonAnswer"
        android:layout_width="200dp"
        android:layout_height="100dp"
        android:text="@string/Answer"
        tools:layout_editor_absoluteX="206dp"
        tools:layout_editor_absoluteY="633dp" />

</androidx.constraintlayout.widget.ConstraintLayout>